# manta_benchmark

./: CLAUDE.md  README.md  pyproject.toml  run_single_eval.py  sample_questions.py  samples.json  sync_questions_to_hf.py
.claude/: settings.local.json
dataset/: manta_questions.csv
logs/: 2026-06-30T20-03-06-00-00_manta-test5_SnRhqEgQ2qCcHvYJ9TTktb.eval
qualitative_analyses/: midterm_report_validated.md
qualitative_analyses/central_argument_analysis/: make_evidence_notebook.py
src/manta/: dynamic_multiturn_solver.py  manta_eval.py  manta_scorer.py
src/manta_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
