[project]
name = "manta-benchmark"
version = "0.1.0"
description = "Multi-turn Assessment for Nonhuman Thinking & Alignment — adversarial multi-turn evaluation of animal welfare reasoning in LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Allen Lu", email = "allen@projectmycelium.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.212",
    "datasets>=4.4.1",
    "python-dotenv>=1.0.0",
    "openai>=2.8.1",
    "anthropic>=0.97.0",
]

[project.urls]
Homepage = "https://github.com/Mycelium-tools/manta_benchmark"
Repository = "https://github.com/Mycelium-tools/manta_benchmark"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.1",
    "uv>=0.9.14",
    "gql<4",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "wandb>=0.26.1",
    "weave>=0.52.37",
    "inspect-wandb>=0.2.3",
    "together>=2.4.0",
    "inspect-petri==3.0.4",
    "modal>=1.4.2",
    "matplotlib>=3.10.8",
    "xai-sdk>=1.11.0",
    "google-genai>=1.73.1",
    "mistralai>=2.4.3",
    "inspect-viz>=0.4.0",
    "seaborn>=0.13.2",
    "ruff>=0.12.0",
    "pytest>=7.0",
]
